--- a/pom.xml
+++ b/pom.xml
@@ -622,29 +622,8 @@
 		<module>groups/runtime-all</module>
 		<module>groups/runtime-javascript</module>
 
-		<module>releng/anonymous-all</module>
-		<module>releng/anonymous-runtime</module>
-		<module>releng/desktop-all</module>
-		<module>releng/openshift-all</module>
-		<module>releng/sap-all</module>
-		<module>releng/sap-all-ephemeral</module>
-		<module>releng/sap-cf-all</module>
-		<module>releng/sap-cf-base</module>
-		<module>releng/sap-cf-runtime</module>
-		<module>releng/sap-kyma-all</module>
-		<module>releng/sap-kyma-base</module>
-		<module>releng/sap-kyma-runtime</module>
-		<module>releng/sap-cms</module>
-		<module>releng/sap-runtime-ephemeral</module>
-		<module>releng/server-all</module>
-		<module>releng/server-keycloak-all</module>
-		<module>releng/server-runtime</module>
-		<module>releng/server-runtime-keycloak</module>
-		<module>releng/trial-all</module>
-		<module>releng/server-javascript</module>
-		<module>releng/server-database</module>
-		<module>releng/server-cms</module>
-		<!-- <module>releng/embedded-all</module> -->
+		<module>releng</module>
+
 	</modules>
 
 </project>
