Fixes #653 [About] Git Commit info is missing

--- a/releng/anonymous-all/pom.xml
+++ b/releng/anonymous-all/pom.xml
@@ -47,6 +47,22 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>pl.project13.maven</groupId>
+				<artifactId>git-commit-id-plugin</artifactId>
+				<version>${git-commit-id-plugin.version}</version>
+				<executions>
+					<execution>
+						<id>get-the-git-infos</id>
+						<goals>
+							<goal>revision</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<dotGitDirectory>../../.git</dotGitDirectory>
+				</configuration>
+			</plugin>
 		</plugins>
 		<resources>
 			<resource>
