--- a/pom.xml
+++ b/pom.xml
@@ -351,19 +351,6 @@
 							</execution>
 						</executions>
 					</plugin>
-					<plugin>
-						<groupId>pl.project13.maven</groupId>
-						<artifactId>git-commit-id-plugin</artifactId>
-						<version>4.0.2</version>
-						<executions>
-							<execution>
-								<id>get-the-git-infos</id>
-								<goals>
-									<goal>revision</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
 				</plugins>
 			</build>
 		</profile>
@@ -596,6 +583,7 @@
 		<javax.mail.api.version>1.6.4</javax.mail.api.version>
 		<olingo.version>2.0.11</olingo.version>
 		<kafka.version>2.6.0</kafka.version>
+		<git-commit-id-plugin.version>4.0.2</git-commit-id-plugin.version>
 
 		<license.header.location>license-header.txt</license.header.location>
 
