--- a/modules/database/database-sql/pom.xml
+++ b/modules/database/database-sql/pom.xml
@@ -29,6 +29,16 @@
 			</plugin>
         </plugins>
     </build>
+    
+    <dependencies>
+    
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-config</artifactId>
+			<version>5.6.0-SNAPSHOT</version>
+		</dependency>
+
+	</dependencies>
 
     <properties>
         <license.header.location>../../../license-header.txt</license.header.location>
