Fixed: #668 - Add a Client API for MongoDB

--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -33,6 +33,7 @@
 		<module>api-bpm</module>
 		<module>api-net</module>
 		<module>api-kafka</module>
+		<module>api-mongodb</module>
 	</modules>
 
 	<properties>
