--- a/api/api-facade/api-mongodb/pom.xml
+++ b/api/api-facade/api-mongodb/pom.xml
@@ -10,8 +10,8 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>API - Facade - All</name>
-	<artifactId>dirigible-api-facade-all</artifactId>
+	<name>API - Facade - Kafka</name>
+	<artifactId>dirigible-api-facade-mongodb</artifactId>
 	<packaging>jar</packaging>
 
 	<build>
@@ -32,60 +32,19 @@
 	</build>
 
 	<dependencies>
-		<!-- API Facades -->
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-cms</artifactId>
+			<artifactId>dirigible-commons-api</artifactId>
 			<version>5.6.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-core</artifactId>
-			<version>5.6.0-SNAPSHOT</version>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>jakarta.persistence</artifactId>
+			<version>${persistence.api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-database</artifactId>
-			<version>5.6.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-http</artifactId>
-			<version>5.6.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-http-async</artifactId>
-			<version>5.6.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-indexing</artifactId>
-			<version>5.6.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-io</artifactId>
-			<version>5.6.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-log</artifactId>
-			<version>5.6.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-mail</artifactId>
-			<version>5.6.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-messaging</artifactId>
-			<version>5.6.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-platform</artifactId>
+			<artifactId>dirigible-database-persistence</artifactId>
 			<version>5.6.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -95,29 +54,51 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-utils</artifactId>
+			<artifactId>dirigible-core-scheduler</artifactId>
 			<version>5.6.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-bpm</artifactId>
+			<artifactId>dirigible-engine-api</artifactId>
 			<version>5.6.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-net</artifactId>
+			<artifactId>dirigible-engine-javascript</artifactId>
 			<version>5.6.0-SNAPSHOT</version>
+		</dependency>
+
+	    <dependency>
+	        <groupId>org.mongodb</groupId>
+	        <artifactId>mongo-java-driver</artifactId>
+	        <version>${mongodb.version}</version>
+	    </dependency>
+
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-test</artifactId>
+			<version>5.6.0-SNAPSHOT</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-kafka</artifactId>
+			<artifactId>dirigible-engine-javascript-graalvm</artifactId>
 			<version>5.6.0-SNAPSHOT</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-facade-mongodb</artifactId>
+			<artifactId>dirigible-database-derby</artifactId>
 			<version>5.6.0-SNAPSHOT</version>
+			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-repository-local</artifactId>
+			<version>5.6.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<properties>
