--- a/ext/ext-all/pom.xml
+++ b/ext/ext-all/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>dirigible-ext-kafka</artifactId>
 			<version>5.6.0-SNAPSHOT</version>
 	   </dependency>
+	   <dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ext-mongodb</artifactId>
+			<version>5.6.0-SNAPSHOT</version>
+	   </dependency>
 	</dependencies>
 
 	<properties>
