--- a/pom.xml
+++ b/pom.xml
@@ -584,6 +584,7 @@
 		<olingo.version>2.0.11</olingo.version>
 		<kafka.version>2.6.0</kafka.version>
 		<git-commit-id-plugin.version>4.0.2</git-commit-id-plugin.version>
+		<mongodb.version>3.12.7</mongodb.version>
 
 		<license.header.location>license-header.txt</license.header.location>
 
