--- a/releng/sap-cf-all/src/main/resources/dirigible.properties
+++ b/releng/sap-cf-all/src/main/resources/dirigible.properties
@@ -15,3 +15,4 @@ DIRIGIBLE_PRODUCT_COMMIT_ID=${git.commit.id}
 DIRIGIBLE_PRODUCT_TYPE=all
 DIRIGIBLE_INSTANCE_NAME=SAP Cloud Platform Cloud Foundry
 DIRIGIBLE_DATABASE_PROVIDER=local
+DIRIGIBLE_SCHEDULER_MEMORY_STORE=true
