--- a/templates/template-database-table/src/main/resources/template-database-table/database.table.template
+++ b/templates/template-database-table/src/main/resources/template-database-table/database.table.template
@@ -1,13 +1,13 @@
 {
-	'name': '{{tableName}}',
-	'type': 'TABLE',
-	'columns': [{
-		'name': 'ID',
-		'type': 'INTEGER',
-		'primaryKey': 'true'
+	"name": "{{tableName}}",
+	"type": "TABLE",
+	"columns": [{
+		"name": "ID",
+		"type": "INTEGER",
+		"primaryKey": "true"
 	}, {
-		'name': 'NAME',
-		'type': 'VARCHAR',
-		'length': '50'
+		"name": "NAME",
+		"type": "VARCHAR",
+		"length": "50"
 	}]
 }
