--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,6 +118,13 @@ jobs:
         docker tag dirigible-trial dirigiblelabs/dirigible-trial
         docker push dirigiblelabs/dirigible-trial
         cd ../../
+    - name: Push Dirigible - Tomcat
+      run: |
+        cd releng
+        docker build -t dirigible-tomcat -f Dockerfile-tomcat .
+        docker tag dirigible-tomcat dirigiblelabs/dirigible-tomcat
+        docker push dirigiblelabs/dirigible-tomcat
+        cd ../
     - name: Push Dirigible - Keycloak
       run: |
         cd releng/server-keycloak-all
