--- a/groups/runtime-javascript/pom.xml
+++ b/groups/runtime-javascript/pom.xml
@@ -75,6 +75,12 @@
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-engine</artifactId>
 		 	<version>5.8.0-SNAPSHOT</version>
+		 	<exclusions>
+		 		<exclusion>
+					<groupId>org.eclipse.dirigible</groupId>
+					<artifactId>dirigible-engine-odata</artifactId>
+				</exclusion>
+		 	</exclusions>
 		</dependency>
 
 		<!-- Resources Plugins -->
