preparation for new APIs

--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -34,6 +34,12 @@
 		<module>api-net</module>
 		<module>api-kafka</module>
 		<module>api-mongodb</module>
+		<module>api-cassandra</module>
+		<module>api-elasticsearch</module>
+		<module>api-etcd</module>
+		<module>api-rabbitmq</module>
+		<module>api-redis</module>
+		<module>api-spark</module>
 	</modules>
 
 	<properties>
