--- a/api/api-facade/api-all/pom.xml
+++ b/api/api-facade/api-all/pom.xml
@@ -118,6 +118,36 @@
 			<artifactId>dirigible-api-facade-mongodb</artifactId>
 			<version>5.8.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-cassandra</artifactId>
+			<version>5.8.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-elasticsearch</artifactId>
+			<version>5.8.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-etcd</artifactId>
+			<version>5.8.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-rabbitmq</artifactId>
+			<version>5.8.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-redis</artifactId>
+			<version>5.8.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-spark</artifactId>
+			<version>5.8.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
