--- a/templates/template-application-ui-angular/src/main/resources/template-application-ui-angular/ui/perspectives/extensions/tile/tile.js.template
+++ b/templates/template-application-ui-angular/src/main/resources/template-application-ui-angular/ui/perspectives/extensions/tile/tile.js.template
@@ -11,6 +11,12 @@
 var dao = require("${projectName}/data/dao/${perspectiveName}/${name}.js")
 
 exports.getTile = function(relativePath) {
+	let count = "n/a";
+	try {
+		count = dao.customDataCount();	
+	} catch (e) {
+		console.error("Error occured while involking '${projectName}/data/dao/${perspectiveName}/${name}.customDataCount()': " + e);
+	}
 	return {
 #if($title)
 		name: "${title}",
@@ -32,7 +38,7 @@ exports.getTile = function(relativePath) {
 		icon: "life-ring",
  #end
 		location: relativePath + "services/v4/web/${projectName}/ui/${perspectiveName}/index.html",
-		count: dao.customDataCount(),
+		count: count,
 #if($perspectiveOrder)
 		order: "${perspectiveOrder}"
 #else
