--- a/modules/services/service-operations/pom.xml
+++ b/modules/services/service-operations/pom.xml
@@ -31,6 +31,14 @@
     </build>
     
     <dependencies>
+    
+    	<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		
     	<dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-commons-api</artifactId>
