--- a/api/api-facade/api-redis/pom.xml
+++ b/api/api-facade/api-redis/pom.xml
@@ -67,12 +67,13 @@
 			<artifactId>dirigible-engine-javascript</artifactId>
 			<version>5.9.0-SNAPSHOT</version>
 		</dependency>
-
-		<!-- Redis dependencies -->
-		
-		<!-- / Redis dependencies -->
-		
-
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <version>3.5.1</version>
+		    <type>jar</type>
+		    <scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-commons-test</artifactId>
