--- a/modules/repository/repository-local/pom.xml
+++ b/modules/repository/repository-local/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>dirigible-commons-api</artifactId>
 			<version>5.9.0-SNAPSHOT</version>
     	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-config</artifactId>
+			<version>5.9.0-SNAPSHOT</version>
+    	</dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-repository-api</artifactId>
