--- a/releng/server-database/src/main/resources/dirigible.properties
+++ b/releng/server-database/src/main/resources/dirigible.properties
@@ -12,6 +12,7 @@
 DIRIGIBLE_PRODUCT_NAME=${project.title}
 DIRIGIBLE_PRODUCT_VERSION=${project.version}
 DIRIGIBLE_PRODUCT_COMMIT_ID=${git.commit.id}
+DIRIGIBLE_PRODUCT_REPOSITORY=https://github.com/eclipse/dirigible
 DIRIGIBLE_PRODUCT_TYPE=database
 DIRIGIBLE_INSTANCE_NAME=server-database
 DIRIGIBLE_HOME_URL=/services/v4/web/ide-database/index.html
