--- a/releng/helm-charts/dirigible-kyma/Chart.yaml
+++ b/releng/helm-charts/dirigible-kyma/Chart.yaml
@@ -6,10 +6,10 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 5.8.3
+version: #{DirigibleVersion}#
 
 # Eclipse Dirigible version
-appVersion: 5.8.3
+appVersion: #{DirigibleVersion}#
 
 keywords:
   - kyma
