Fixes #760 [CI/CD] Generate Helm charts as part of the release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -351,6 +351,59 @@ jobs:
 
 #----------------Publish GitHub Release------------------#
 
+#----------------Publish Helm Release------------------#
+
+    - name: Helm tool installer
+      uses: Azure/setup-helm@v1
+    - name: Helm Charts Release - Checkout gh-pages
+      run: |
+        mkdir charts-temp
+        cp -r releng/helm-charts/ charts-temp/
+        git fetch
+        git checkout gh-pages
+        
+        cp charts/* .
+
+    - name: Helm Charts Release - Set Chart Version - Dirigible
+      run: |
+        cd charts-temp/helm-charts/dirigible/
+        find *.yaml -type f -exec sed -i ''s/#{DirigibleVersion}#/${{ env.DIRIGIBLE_VERSION }}/g'' {} \;
+
+    - name: Helm Charts Release - Set Chart Version - Dirigible - Kyma
+      run: |
+        cd charts-temp/helm-charts/dirigible-kyma/
+        find *.yaml -type f -exec sed -i ''s/#{DirigibleVersion}#/${{ env.DIRIGIBLE_VERSION }}/g'' {} \;
+
+    - name: Helm Charts Release
+      run: |
+
+        cp charts/* charts-temp/helm-charts/
+        cd charts-temp/helm-charts/
+
+        helm package dirigible
+        helm package dirigible-kyma
+        mv dirigible-$DIRIGIBLE_VERSION.tgz chart-dirigible-$DIRIGIBLE_VERSION.tgz
+        mv dirigible-kyma-$DIRIGIBLE_VERSION.tgz chart-dirigible-kyma-$DIRIGIBLE_VERSION.tgz
+        cd ..
+        helm repo index helm-charts/ --url https://eclipse.github.io/dirigible/charts
+        
+        cp helm-charts/index.yaml ../.
+        cp helm-charts/chart-dirigible-$DIRIGIBLE_VERSION.tgz ../charts/
+        cp helm-charts/chart-dirigible-kyma-$DIRIGIBLE_VERSION.tgz ../charts/
+
+        cd ..
+        git config user.name "$GITHUB_ACTOR"
+        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+        git add index.yaml
+        git add charts/
+        git commit -m "Updates Helm Charts - Release $DIRIGIBLE_VERSION"
+        git push origin gh-pages
+
+        git add .
+        git reset --hard
+        git checkout master
+#----------------Publish Helm Release------------------#
+
 #-----------------Create GitHub Branch-------------------#
 
     - name: Create GitHub Branch
