#760 Helm Charts - Updates release markdown

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -212,6 +212,16 @@ jobs:
           </dependency>
           ```
 
+          #### Helm:
+
+          All Helm Charts can be found [here](https://artifacthub.io/packages/search?page=1&repo=eclipse-dirigible).
+
+          ```
+          helm repo add dirigible https://eclipse.github.io/dirigible
+          helm repo update
+          helm install dirigible dirigible/dirigible --ingress.enabled=false
+          ```
+
           #### Docker images:
             - [dirigiblelabs/dirigible-anonymous](https://hub.docker.com/r/dirigiblelabs/dirigible-anonymous/tags?page=1&ordering=last_updated) - Anonymous access.
             - [dirigiblelabs/dirigible-runtime-anonymous](https://hub.docker.com/r/dirigiblelabs/dirigible-runtime-anonymous/tags?page=1&ordering=last_updated) - Anonymous access _(runtime only)_.
