--- a/releng/helm-charts/dirigible-kyma/templates/deployment.yaml
+++ b/releng/helm-charts/dirigible-kyma/templates/deployment.yaml
@@ -21,8 +21,19 @@ spec:
       serviceAccountName: {{ include "dirigible.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+{{- if .Values.volume.enabled -}}
+      volumes:
+        - name: {{ include "dirigible.fullname" . }}-volume
+          persistentVolumeClaim:
+            claimName: {{ include "dirigible.fullname" . }}-claim
+{{- end }}
       containers:
         - name: {{ .Chart.Name }}
+{{- if .Values.volume.enabled -}}
+          volumeMounts:
+          - name: {{ include "dirigible.fullname" . }}-volume
+            mountPath: /usr/local/tomcat/target/dirigible
+{{- end }}
           env:
             - name: DIRIGIBLE_HOST
               value: https://{{ $.Values.apirule.host }}
